Update image source path in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <h3 class="scroll-subtitle">From Sacred Ritual to Global Anthem</h3>
             
             <div class="image-frame">
-                <img src="assets/qawwali-intro.jpg" alt="Qawwali Singer in spiritual performance" class="hero-image">
+                <img src="qawwali-intro.jpg" alt="Qawwali Singer in spiritual performance" class="hero-image">
             </div>
 
             <div class="text-block-light">
