Update shrine section styling and heading

--- a/index.html
+++ b/index.html
@@ -43,11 +43,15 @@
         </div>
     </section>
 
-    <section id="shrine" class="page" style="display:none;">
-        <h1>Shrine Section</h1>
+    <section id="shrine" style="min-height: 100vh; background-color: #2C1A12; color: #F9F4E6; padding: 50px;">
+        <h2>The Journey Begins...</h2>
+        <p>(Next Section Loading...)</p>
     </section>
 
     <script src="script.js"></script>
+
+</body>
+</html>
 
 </body>
 </html>
