Revise research statement for clarity and focus

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <div class="text-block-light">
                     <p class="research-statement">
-                        "This project traces Qawwali's evolution through the figures and performance contexts that have shaped its meaning across generations—from the sacred rituals of the shrine to the global stage of Coke Studio."
+                        "This project studies the evolution of Qawalli from a shrine-centered Sufi devotional practice into a modern cultural form performed in social gatherings and popular media in Pakistan. We will also explore how this transformation reshaped the ways newer generations understand and experience Sufism."
                     </p>
                     
                     <div class="signature-block">
