--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 <div class="image-frame">
                     <img src="qawwali-intro.jpg" alt="Qawwali Singer in spiritual performance" class="hero-image">
                 </div>
+                <div class="video-frame">
+                    <video controls playsinline>
+                        <source src="intro-clip.mp4" type="video/mp4">
+                    </video>
+                </div>
 
                 <div class="text-block-light">
                     <p class="research-statement">
